feat(header, footer.tsx): Add new header and footer components; config(routes): configure routes;

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -4,5 +4,10 @@
     "dark": "Dark",
     "system": "System"
   },
-  "heading": "Hello heading"
+  "navigation": {
+    "home": "_hello",
+    "about": "_about-me",
+    "project": "_projects",
+    "contact": "_contact-me"
+  }
 }
