--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -4,5 +4,10 @@
     "dark": "Tối",
     "system": "Hệ thống"
   },
-  "heading": "Tiêu đề 1"
+  "navigation": {
+    "home": "Trang chủ",
+    "about": "Về tôi",
+    "project": "Dự án nho nhỏ",
+    "contact": "Liên hệ tôi"
+  }
 }
